Fixing clipping issues

--- a/pages/1999.css
+++ b/pages/1999.css
@@ -141,7 +141,7 @@ p {
 .content {
   display: flex;
   flex-wrap: wrap;
-  margin: 0rem 2rem 266px;
+  margin: 0rem 2rem;
   max-width: 960px;
 }
 
